# argrank

./: README.md  pyproject.toml
src/argrank/: __main__.py
