[build-system]
requires = ["hatchling", "texttable", "websockets", "regex"]
build-backend = "hatchling.build"

[project]
name = "argrank"
version = "0.0.1"
authors = [
  { name="Alessandro Salerno" },
]
description = "Dynamic path evaluator for Esame di Stato 2024"
license = { file="LICENSE" }
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/Alessandro-Salerno/argrank"
"Bug Tracker" = "https://github.com/Alessandro-Salerno/argrank/issues"
